Todo's
======

* port the doc to rst (Sphinx?)
* make a unittest test suite out of my local ones
* provide meaningful examples of use
* support win32?



svn trunk
=========

misc:

- better gc support (should fix circular reference cases).


watchers (common):

- Issue #6: on Python 2 the priority attribute was supposed to be an int but
  accepted only longs.



Release 0.5.0-3.8
=================

misc:

- Bumped libev to pristine 3.8.
- pyev now works with Python 2 (>= 2.6.2) and Python 3 (>= 3.1.1).


module:

- Minor fixes in module init code (there was memory leaks in case of error).
- Added EVFLAG_NOINOTIFY, EVFLAG_NOSIGFD constants.
- Added EV_IO, EV_TIMER, EV_CUSTOM constants.


Loop:

- New method depth() (from libev ev_loop_depth).
- New methods suspend()/resume() (from libev ev_suspend/ev_resume).
- Added a data attribute.
- New methods pending_invoke()/pending_count() (from libev ev_invoke_pending/
  ev_pending_count).
- Added a pending_cb attribute.
- Change verify() so that it is always present (and stick to libev EV_VERIFY
  default value if not in a debug build).


Timer:

- New method remaining() (from libev ev_timer_remaining).


Signal:

- No need for a default loop anymore.


Periodic:

- If 'reschedule_cb' raises an error and pyev runs out of memory handling it,
  the program will abort.



Release 0.4.0-3.53
==================

misc:

- pyev now embeds libev. The modifications to libev are really trivial, in fact
  pyev should work with an unpatched libev. The patch applied to libev is
  included in the source distribution for documentation.
- Better documentation overall (at least I think).
- pyev is now published under a dual bsd/gpl scheme.


module:

- The module is (correctly) named pyev, not ev.
- Added EV_MINPRI, EV_MAXPRI constants.
- Function pyev.version() has been renamed pyev.abi_version(), pyev.version()
  now returns version strings for pyev and the underlying libev.


Loop:
